--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
         "@material-ui/core": "^4.9.11",
         "@material-ui/icons": "^4.9.1",
         "google-maps-react": "^2.0.6",
-        "react-router-dom": "^5.1.2"
+        "query-string": "^6.12.1",
+        "react-redux": "^7.2.0",
+        "react-router-dom": "^5.1.2",
+        "redux": "^4.0.5"
     }
 }
