--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "query-string": "^6.12.1",
         "react-redux": "^7.2.0",
         "react-router-dom": "^5.1.2",
+        "recharts": "^1.8.5",
         "redux": "^4.0.5"
     }
 }
